ignored some gitties

--- a/uw-ranked/.gitignore
+++ b/uw-ranked/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+Cursor_Rules.md
+
+Group 3 - Practicum Spotlight.txt
+Project_Breakdown.md
