--- a/toxicity-analyzer/package.json
+++ b/toxicity-analyzer/package.json
@@ -13,6 +13,8 @@
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "googleapis": "^148.0.0",
     "next": "15.3.1",
