--- a/toxicity-analyzer/package.json
+++ b/toxicity-analyzer/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/postcss": "^4.1.8",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
@@ -24,13 +25,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5"
   }
 }
