Added modal detoxify model caching for faster processing

--- a/toxicity-analyzer/.gitignore
+++ b/toxicity-analyzer/.gitignore
@@ -46,6 +46,7 @@ Cursor_Rules.md
 Group 3 - Practicum Spotlight.txt
 Project_Breakdown.md
 DB_Schema.md
+instructions/
 
 Group_3-MidtermReport.txt
 
